@@ -1,6 +1,6 @@
 Package: RMark
 Version: 2.1.0
-Date: 2011-12-1
+Date: 2011-12-29
 Title: R Code for MARK Analysis
 Author: Jeff Laake <jeff.laake@noaa.gov> with contributions
     from Eldar Rakimberdiev, Bret Collier, Jay Rotella and
