@@ -2020,6 +2020,8 @@ NULL
 #' a filename can be specified to pick up orphaned MARK output files for a model that was run but not saved. This used
 #' to work but when I added code to allow user-specified prefixes (ie something other than marknnn) the change I made broke
 #' the other feature.  Thanks to Kelly Hastings for bringing this to my attention.
+#' \item Patch was made to  \code{\link{make.mark.model}}to allow design data to be deleted on shared parameters. Thanks to 
+#' Claudia Penaloza for reporting this issue.
 #' }
 #' Version 2.0.9 (1 Dec 2011) \itemize{ \item Patch was made to  \code{\link{make.mark.model}} to fix bug in
 #' PIM creation for a multi-session model and there was just 1 session. Thanks to Erin Roche for helping to 
